[gd_scene load_steps=8 format=3 uid="uid://bwk7tjlhnu23j"]

[ext_resource type="Script" path="res://examples/demo.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://banj0dmrk5t1e" path="res://icon.png" id="3"]
[ext_resource type="Theme" uid="uid://dc6c1peo4pfyr" path="res://addons/dialogue_nodes/themes/bubbly.theme" id="4"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/dialogueBox.gd" id="8_kplwy"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="9_4rd6n"]

[sub_resource type="Curve" id="1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.71435, 0.0, 0, 0]
point_count = 2

[sub_resource type="RichTextEffect" id="RichTextEffect_fpwbw"]
script = ExtResource("9_4rd6n")

[node name="Demo" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4")
script = ExtResource("2")

[node name="DemoSelector" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -62.0
offset_right = 67.5
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = 56.5
offset_right = 52.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Demo"

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(508.747, 200.498)
emitting = false
amount = 64
one_shot = true
speed_scale = 1.5
explosiveness = 0.9
randomness = 0.2
lifetime_randomness = 0.5
texture = ExtResource("3")
emission_shape = 1
emission_sphere_radius = 32.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("1")

[node name="DialogueBox" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(256, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -404.0
offset_top = -215.0
offset_right = 409.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("8_kplwy")
dialogue_file = "res://examples/Example1.json"
start_id = "START"
input_action = null
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_fpwbw")])

[connection signal="item_selected" from="DemoSelector" to="." method="_on_demo_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="dialogue_signal" from="DialogueBox" to="." method="_on_dialogue_signal"]
